--- a/nioh2/tools/temper_tables/waist_tables.html
+++ b/nioh2/tools/temper_tables/waist_tables.html
@@ -499,6 +499,257 @@
 
 
     <!-- ========== ========== ========== ========== ==========
+    Ethereal Gear Only Attribute Tables
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 id="ethereal-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Ethereal Gear Only Attribute Tables</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <p class="px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                Attributes within a table conflict with other attributes in that same table. Attributes in the No Conflict Table 
+                do not conflict with each other. 
+            </p>
+
+            <!-- ==========
+            Damage Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage</span>
+                            <span class="text-red-500">(Light Armor)</span>
+                        </td>
+                        <td>3.9 %</td>
+                        <td>4.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage</span>
+                            <span class="text-red-500">Medium Armor</span>
+                        </td>
+                        <td>3.4 %</td>
+                        <td>4.4 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage</span>
+                            <span class="text-red-500">(Heavy Armor)</span>
+                        </td>
+                        <td>2.9 %</td>
+                        <td>3.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage (Unscathed)</span>
+                            <span class="text-red-500">(Light Armor)</span>
+                        </td>
+                        <td>6.9 %</td>
+                        <td>7.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage (Unscathed)</span>
+                            <span class="text-red-500">(Medium Armor)</span>
+                        </td>
+                        <td>5.9 %</td>
+                        <td>6.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage (Unscathed)</span>
+                            <span class="text-red-500">(Heavy Armor)</span>
+                        </td>
+                        <td>4.9 %</td>
+                        <td>5.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage (Critical)</span>
+                            <span class="text-red-500">(Light Armor)</span>
+                        </td>
+                        <td>7.9 %</td>
+                        <td>8.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage (Critical)</span>
+                            <span class="text-red-500">(Medium Armor)</span>
+                        </td>
+                        <td>6.9 %</td>
+                        <td>7.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage (Critical)</span>
+                            <span class="text-red-500">(Heavy Armor)</span>
+                        </td>
+                        <td>5.9 %</td>
+                        <td>6.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Active Skill Damage</span>
+                            <span class="text-red-500">(Light Armor)</span>
+                        </td>
+                        <td>5.9 %</td>
+                        <td>6.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Active Skill Damage</span>
+                            <span class="text-red-500">(Medium Armor)</span>
+                        </td>
+                        <td>4.9 %</td>
+                        <td>5.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Active Skill Damage</span>
+                            <span class="text-red-500">(Heavy Armor)</span>
+                        </td>
+                        <td>3.9 %</td>
+                        <td>4.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Elemental Weapon Damage</span>
+                        </td>
+                        <td>3.9 %</td>
+                        <td>4.9 %</td>
+                        <td>No</td>
+                    </tr>
+                </table>
+            </div>
+
+            <!-- ==========
+            Ki Damage Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Ki Damage Attributes</h3>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Ki Damage</span>
+                            <span class="text-red-500">(Light Armor)</span>
+                        </td>
+                        <td>2.9%</td>
+                        <td>3.9%</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Ki Damage</span>
+                            <span class="text-red-500">(Medium Armor)</span>
+                        </td>
+                        <td>3.9%</td>
+                        <td>4.9%</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Ki Damage</span>
+                            <span class="text-red-500">(Heavy Armor)</span>
+                        </td>
+                        <td>2.9%</td>
+                        <td>3.9%</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Active Skill Ki Damage</span>
+                            <span class="text-red-500">(Light Armor)</span>
+                        </td>
+                        <td>4.9%</td>
+                        <td>5.9%</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Active Skill Ki Damage</span>
+                            <span class="text-red-500">(Medium Armor)</span>
+                        </td>
+                        <td>5.9%</td>
+                        <td>6.9%</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Active Skill Ki Damage</span>
+                            <span class="text-red-500">(Heavy Armor)</span>
+                        </td>
+                        <td>4.9%</td>
+                        <td>5.9%</td>
+                        <td>No</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
