Updated comments, spacing, and spelling mistakes in gloves_tables, torso_tables, waist_tables, and weapon_tables .html files.

--- a/nioh2/tools/temper_tables/waist_tables.html
+++ b/nioh2/tools/temper_tables/waist_tables.html
@@ -555,7 +555,7 @@
                     <tr class="odd:bg-dark-gray-2">
                         <td>
                             <span class="text-uncommon-text-color">Melee Damage</span>
-                            <span class="text-red-500">Medium Armor</span>
+                            <span class="text-red-500">(Medium Armor)</span>
                         </td>
                         <td>3.4 %</td>
                         <td>4.4 %</td>
