Updated content in waist_tables.html. Added and completed boots_tables.html. Added the href link for the boots temper tables page in temper_tables_index.html.

--- a/nioh2/tools/temper_tables/boots_tables.html
+++ b/nioh2/tools/temper_tables/boots_tables.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waist Temper Tables</title>
+    <title>Boots Temper Tables</title>
     <!-- ========== ========== ==========
     Google Fonts (Asul)
     ========== ========== ========== -->
@@ -228,8 +228,8 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h1 class="text-yellow-400 text-5xl md:text-6xl p-2 text-center">Waist Temper Tables</h1>
-            <img src="./img/waist_icon.png" alt="Weapons icon">
+            <h1 class="text-yellow-400 text-5xl md:text-6xl p-2 text-center">Boots Temper Tables</h1>
+            <img src="./img/boots_icon.png" alt="Weapons icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
@@ -296,15 +296,15 @@
                     ========== -->
                     <tr class="odd:bg-dark-gray-2">
                         <td><span class="text-uncommon-text-color">Ninjutsu Power</span></td>
-                        <td>8</td>
-                        <td>9</td>
-                        <td>No</td>
+                        <td>5</td>
+                        <td>6</td>
+                        <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td><span class="text-uncommon-text-color">Onmyo Magic Power</span></td>
-                        <td>8</td>
-                        <td>9</td>
-                        <td>No</td>
+                        <td>5</td>
+                        <td>6</td>
+                        <td>Yes</td>
                     </tr>
                 </table>
             </div>
@@ -338,32 +338,32 @@
                     ========== -->
                     <tr class="odd:bg-dark-gray-2">
                         <td>Fire Resistance</td>
-                        <td>3.5</td>
-                        <td>3.8</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
                         <td>No</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td>Water Resistanc</td>
-                        <td>3.5</td>
-                        <td>3.8</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
                         <td>No</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td>Lightning Resistance</td>
-                        <td>3.5</td>
-                        <td>3.8</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
                         <td>No</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td>Poison Resistance</td>
-                        <td>3.5</td>
-                        <td>3.8</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
                         <td>No</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td>Paralysis Resistance</td>
-                        <td>3.5</td>
-                        <td>3.8</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
                         <td>No</td>
                     </tr>
                 </table>
@@ -398,8 +398,8 @@
                     ========== -->
                     <tr class="odd:bg-dark-gray-2">
                         <td>Defense</td>
-                        <td>8</td>
-                        <td>9</td>
+                        <td>6</td>
+                        <td>7</td>
                         <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
@@ -409,33 +409,45 @@
                         <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
+                        <td>Gold Earned</td>
+                        <td>1.5%</td>
+                        <td>1.7%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Amrita Earned</td>
+                        <td>0.7%</td>
+                        <td>0.8%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
                         <td>Projectile Damage Taken</td>
                         <td>-3.9%</td>
                         <td>-4.3%</td>
                         <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
-                        <td>Equipment Drop Rate Vs. Yokai</td>
+                        <td>Equipment Drop Rate vs. Yokai</td>
                         <td>2.9%</td>
                         <td>3.4%</td>
                         <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
-                        <td>
-                            Dash Ki Consumption
-                            <span class="text-red-500">(Critical)</span>
-                        </td>
+                        <td>Dash Ki Consuption (Critical)</td>
                         <td>-2.5%</td>
                         <td>-2.6%</td>
                         <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
-                        <td>
-                            Dodge Ki Consumption
-                            <span class="text-red-500">(Critical)</span>
-                        </td>
+                        <td>Dodge Ki Consumption (Critical)</td>
                         <td>-4.3%</td>
                         <td>-4.4%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Damage Taken Over Time (Fire)</td>
+                        <td>-10.9%</td>
+                        <td>-15.9%</td>
                         <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
@@ -451,13 +463,7 @@
                         <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
-                        <td><span class="text-uncommon-text-color">Life</span></td>
-                        <td>49</td>
-                        <td>52</td>
-                        <td>Yes</td>
-                    </tr>
-                    <tr class="odd:bg-dark-gray-2">
-                        <td><span class="text-uncommon-text-color">Dash Ki Consumption</span></td>
+                        <td><span class="text-uncommon-text-color">Dash Ki Consuption</span></td>
                         <td>-1.7%</td>
                         <td>-1.8%</td>
                         <td>Yes</td>
@@ -467,12 +473,6 @@
                         <td>-2.9%</td>
                         <td>-3.0%</td>
                         <td>Yes</td>
-                    </tr>
-                    <tr class="odd:bg-dark-gray-2">
-                        <td><span class="text-rare-text-color">Ki Recovery Bonus (Amrita Guage)</span></td>
-                        <td>B+</td>
-                        <td>A</td>
-                        <td>No</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td><span class="text-rare-text-color">Running Speed</span></td>
@@ -487,11 +487,11 @@
                         <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
-                        <td><span class="text-exotic-text-color">Tenacity (Damage Over Time)</span></td>
+                        <td><span class="text-exotic-text-color">Tenactiy (Damage Over Time)</span></td>
                         <td>-</td>
                         <td>-</td>
                         <td>Yes</td>
-                    </tr>                    
+                    </tr>
                 </table>
             </div>
         </div>
@@ -1099,7 +1099,7 @@
                             <img class="inline" src="./img/starred_icon.png" alt="starred icon">
                             <span class="text-rare-text-color">Ninjutsu Power</span>
                         </td>
-                        <td>12 - 13</td>
+                        <td>11 - 12</td>
                         <td>13 - 14</td>
                         <td>No</td>
                     </tr>
@@ -1108,7 +1108,7 @@
                             <img class="inline" src="./img/starred_icon.png" alt="starred icon">
                             <span class="text-rare-text-color">Onmyo Magic Power</span>
                         </td>
-                        <td>12 - 13</td>
+                        <td>11 - 12</td>
                         <td>13 - 14</td>
                         <td>No</td>
                     </tr>
@@ -1145,46 +1145,38 @@
                     <tr class="odd:bg-dark-gray-2">
                         <td>
                             <img class="inline" src="./img/starred_icon.png" alt="starred icon">
-                            <span class="text-uncommon-text-color">Damage Taken</span>
+                            <span class="text-uncommon-text-color">Dash Speed</span>
                         </td>
-                        <td>3.6% - 3.8%</td>
-                        <td>4.1% - 4.3%</td>
+                        <td>7.1% - 8.0%</td>
+                        <td>9.1% - 10.0%</td>
                         <td>No</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td>
                             <img class="inline" src="./img/starred_icon.png" alt="starred icon">
-                            <span class="text-uncommon-text-color">Sentience Charge</span>
+                            <span class="text-uncommon-text-color">Dash Ki Consumption</span>
                         </td>
-                        <td>17.1% - 18.0%</td>
-                        <td>19.1% - 20.0%</td>
+                        <td>(-12.1%) - (-13.0%)</td>
+                        <td>(-14.1%) - (-15.0%)</td>
                         <td>No</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td>
                             <img class="inline" src="./img/starred_icon.png" alt="starred icon">
-                            <span class="text-rare-text-color">Life</span>
+                            <span class="text-uncommon-text-color">Dodge Ki Consumption</span>
                         </td>
-                        <td>291 - 300</td>
-                        <td>341 - 350</td>
+                        <td>(-7.1%) - (-8.0%)</td>
+                        <td>(-14.1%) - (-15.0%)</td>
                         <td>No</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td>
                             <img class="inline" src="./img/starred_icon.png" alt="starred icon">
-                            <span class="text-rare-text-color">Posion Resistance</span>
+                            <span class="text-uncommon-text-color">Extended Dodge Invulnerability</span><br>
+                            <span class="text-red-500">(Light Armor)</span>
                         </td>
-                        <td>7.1 - 8.0</td>
-                        <td>9.1 - 10.0</td>
-                        <td>No</td>
-                    </tr>
-                    <tr class="odd:bg-dark-gray-2">
-                        <td>
-                            <img class="inline" src="./img/starred_icon.png" alt="starred icon">
-                            <span class="text-rare-text-color">Damage Over Time</span>
-                        </td>
-                        <td>(-24.1%) - (-25.0%)</td>
-                        <td>(-29.1%) - (-30.0%)</td>
+                        <td>-</td>
+                        <td>-</td>
                         <td>No</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
@@ -1199,18 +1191,7 @@
                     <tr class="odd:bg-dark-gray-2">
                         <td>
                             <img class="inline" src="./img/starred_icon.png" alt="starred icon">
-                            <img class="inline" src="./img/buff_icon.png" alt="buff icon">
-                            <span class="text-buff-text-color">Auto-Life Recovery</span>
-                            <span class="text-exotic-text-color">(Ki Depleted)</span>
-                        </td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>No</td>
-                    </tr>
-                    <tr class="odd:bg-dark-gray-2">
-                        <td>
-                            <img class="inline" src="./img/starred_icon.png" alt="starred icon">
-                            <span class="text-divine-text-color">Extended Timely Guard Window</span>
+                            <span class="text-divine-text-color">Dodge Range Up</span>
                         </td>
                         <td>-</td>
                         <td>-</td>
@@ -1224,11 +1205,12 @@
                         <td>-</td>
                         <td>-</td>
                         <td>No</td>
-                    </tr>
+                    </tr>                    
                     <tr class="odd:bg-dark-gray-2">
                         <td>
                             <img class="inline" src="./img/starred_icon.png" alt="starred icon">
                             <span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Rarity Inheritance (Soul Match)</span>
+                        </td>
                         <td>-</td>
                         <td>-</td>
                         <td>No</td>
