Fixed text color to be proper text color in certain attributes in ranged_tables and waist_tables .html files.

--- a/nioh2/tools/temper_tables/ranged_tables.html
+++ b/nioh2/tools/temper_tables/ranged_tables.html
@@ -528,7 +528,10 @@
                         <td>Yes</td>
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
-                        <td>Fire Damage (Cannon only)</td>
+                        <td>
+                            Fire Damage 
+                            <span class="text-red-500">(Cannon only)</span>
+                        </td>
                         <td>9.9%</td>
                         <td>10.9%</td>
                         <td>Yes</td>
