--- a/nioh2/tools/temper_tables/waist_tables.html
+++ b/nioh2/tools/temper_tables/waist_tables.html
@@ -422,8 +422,7 @@
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td>
-                            Dash Ki Consumption
-                            <span class="text-red-500">(Critical)</span>
+                            Dash Ki Consumption (Critical)
                         </td>
                         <td>-2.5%</td>
                         <td>-2.6%</td>
@@ -431,8 +430,7 @@
                     </tr>
                     <tr class="odd:bg-dark-gray-2">
                         <td>
-                            Dodge Ki Consumption
-                            <span class="text-red-500">(Critical)</span>
+                            Dodge Ki Consumption (Critical)
                         </td>
                         <td>-4.3%</td>
                         <td>-4.4%</td>
