Updated content in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -490,7 +490,7 @@
                     </div></td>
                     <td>
                         Ring and drop all of the bells in the main mission: <a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a>.
-                        You can view the guide 
+                        There are a total of 6 Bells. You can view the guide 
                         <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=k-L1_8kgkSU" target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
