Fixed the rounding of corners for tables in various .html files.

--- a/nioh2/equipment/soul_cores/farming_cores.html
+++ b/nioh2/equipment/soul_cores/farming_cores.html
@@ -273,7 +273,7 @@
             <!-- ==========
             section header
             ========== -->
-            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Soul Cores</h2>
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Soul Cores</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <button id="sort-button-1" class="sort-button base-table w-full max-w-[250px] py-3 rounded-lg bg-yellow-500 text-xl text-stone-900
