--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -727,7 +727,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
 			<div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
-				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
 					<!-- ==========
 					Header
 					========== -->
