--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -311,7 +311,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
 			<div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
-				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
 					<!-- ==========
 					Header
 					========== -->
@@ -1243,7 +1243,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
 			<div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
-				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
 					<!-- ==========
 					Header
 					========== -->
@@ -2114,7 +2114,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
 			<div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
-				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
 					<!-- ==========
 					Header
 					========== -->
@@ -2601,7 +2601,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
 			<div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
-				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
 					<!-- ==========
 					Header
 					========== -->
@@ -2804,7 +2804,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
 			<div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
-				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
 					<!-- ==========
 					Header
 					========== -->
@@ -3576,7 +3576,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
 			<div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
-				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+				<table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
 					<!-- ==========
 					Header
 					========== -->
