--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -290,129 +290,131 @@
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Blessings of the Departed Table</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
-            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
-                <!-- ==========
-                Header
-                ========== -->
-                <tr>
-                    <th>Blessing</th>
-                    <th>Maximum number of times this blessing can be enhanced</th>
-                    <th>Increased amount of Lapis Lazuli required after each enhancement</th>
-                    <th>Total Lapis Lazuli required to max out Blessing</th>
-                    <th>Description</th>
-                </tr>
-
-                <!-- ==========
-                Table Data
-                ========== -->
-                <tr class="even:bg-dark-gray-2">
-                    <td>Loot +Value Modifier</td>
-                    <td>60</td>
-                    <td>
-                        Starting cost: 10 
-                        <br><br>
-                        +1 on each enhancement from 1 to 50, +10 on each enhancement from 51 to 55, +20 on each enhancement from 55 to 60
-                    </td>
-                    <td>3,085</td>
-                    <td>
-                        This modifier makes it easier to receive higher +values on equipment that is dropped by defeated enemies.
-                        If you are outside the Underworld, this blessing is effective even when Level Sync is active.
-                    </td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td>Effect of Jizo Blessing: Uncommon Strength</td>
-                    <td>5</td>
-                    <td>
-                        Starting cost: 20
-                        <br><br>
-                        +20 on each enhancement
-                    </td>
-                    <td>420</td>
-                    <td>Strengthens the effects of the Jizo Blessing: Uncommon Strength</td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td>Effect of Jizo Blessing: Uncommon Defense</td>
-                    <td>5</td>
-                    <td>
-                        Starting cost: 20
-                        <br><br>
-                        +20 on each enhancement
-                    </td>
-                    <td>420</td>
-                    <td>Strengthens the effects of the Jizo Blessing: Uncommon Defense</td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td>Effect of Jizo Blessing: Uncommon Mercy</td>
-                    <td>5</td>
-                    <td>
-                        Starting cost: 20
-                        <br><br>
-                        +20 on each enhancement
-                    </td>
-                    <td>420</td>
-                    <td>Strengthens the effects of the Jizo Blessing: Uncommon Mercy</td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td>Spectral Salve Limit</td>
-                    <td>5</td>
-                    <td>
-                        Starting cost: 20
-                        <br><br>
-                        +20 on each enhancement
-                    </td>
-                    <td>420</td>
-                    <td>Increases the amount of Spectral Salves you can carry. Spectral Salves are special healing items that
-                        can only be used in the Underworld.
-                    </td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td>Spectral Salve Potency</td>
-                    <td>5</td>
-                    <td>
-                        Starting cost: 20
-                        <br><br>
-                        +20 on each enhancement
-                    </td>
-                    <td>420</td>
-                    <td>
-                        Increases the amount of health recovered when using Spectral Salves, special healing items that can only
-                        be used in the Underworld.
-                    </td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td>Ethereal Drop Rate</td>
-                    <td>20</td>
-                    <td>Starting cost: 20
-                        <br><br>
-                        +20 on each enhancement</td>
-                    <td>4,620</td>
-                    <td>
-                        Increases the drop rate of ethereal equipment. This blessing is effective even when you are outside of
-                        the Underworld. 
-                    </td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td>Higher Item Level Drop Rate</td>
-                    <td>5</td>
-                    <td>
-                        Starting cost: 20
-                        <br><br>
-                        +20 on each enhancement
-                    </td>
-                    <td>420</td>
-                    <td>
-                        Increases the drop rate of equipment that possess a higher Item Level than you would normally receive.
-                        This blessing is effective even when you are outside of the Underworld.
-                    </td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col items-center gap-3">
-                        <span>Total Lapis Lazuli required to max out the entire Blessings of the Departed table</span>
-                        <img class="scale-75" src="./img/lapis_icon.png" alt="Lapis icon">
-                    </div></td>
-                    <td colspan="4"><span class="font-bold text-yellow-400">10,225 Lapis Lazuli Required</span></td>
-                </tr>
-            </table>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th>Blessing</th>
+                        <th>Maximum number of times this blessing can be enhanced</th>
+                        <th>Increased amount of Lapis Lazuli required after each enhancement</th>
+                        <th>Total Lapis Lazuli required to max out Blessing</th>
+                        <th>Description</th>
+                    </tr>
+    
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="even:bg-dark-gray-2">
+                        <td>Loot +Value Modifier</td>
+                        <td>60</td>
+                        <td>
+                            Starting cost: 10 
+                            <br><br>
+                            +1 on each enhancement from 1 to 50, +10 on each enhancement from 51 to 55, +20 on each enhancement from 55 to 60
+                        </td>
+                        <td>3,085</td>
+                        <td>
+                            This modifier makes it easier to receive higher +values on equipment that is dropped by defeated enemies.
+                            If you are outside the Underworld, this blessing is effective even when Level Sync is active.
+                        </td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>Effect of Jizo Blessing: Uncommon Strength</td>
+                        <td>5</td>
+                        <td>
+                            Starting cost: 20
+                            <br><br>
+                            +20 on each enhancement
+                        </td>
+                        <td>420</td>
+                        <td>Strengthens the effects of the Jizo Blessing: Uncommon Strength</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>Effect of Jizo Blessing: Uncommon Defense</td>
+                        <td>5</td>
+                        <td>
+                            Starting cost: 20
+                            <br><br>
+                            +20 on each enhancement
+                        </td>
+                        <td>420</td>
+                        <td>Strengthens the effects of the Jizo Blessing: Uncommon Defense</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>Effect of Jizo Blessing: Uncommon Mercy</td>
+                        <td>5</td>
+                        <td>
+                            Starting cost: 20
+                            <br><br>
+                            +20 on each enhancement
+                        </td>
+                        <td>420</td>
+                        <td>Strengthens the effects of the Jizo Blessing: Uncommon Mercy</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>Spectral Salve Limit</td>
+                        <td>5</td>
+                        <td>
+                            Starting cost: 20
+                            <br><br>
+                            +20 on each enhancement
+                        </td>
+                        <td>420</td>
+                        <td>Increases the amount of Spectral Salves you can carry. Spectral Salves are special healing items that
+                            can only be used in the Underworld.
+                        </td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>Spectral Salve Potency</td>
+                        <td>5</td>
+                        <td>
+                            Starting cost: 20
+                            <br><br>
+                            +20 on each enhancement
+                        </td>
+                        <td>420</td>
+                        <td>
+                            Increases the amount of health recovered when using Spectral Salves, special healing items that can only
+                            be used in the Underworld.
+                        </td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>Ethereal Drop Rate</td>
+                        <td>20</td>
+                        <td>Starting cost: 20
+                            <br><br>
+                            +20 on each enhancement</td>
+                        <td>4,620</td>
+                        <td>
+                            Increases the drop rate of ethereal equipment. This blessing is effective even when you are outside of
+                            the Underworld. 
+                        </td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>Higher Item Level Drop Rate</td>
+                        <td>5</td>
+                        <td>
+                            Starting cost: 20
+                            <br><br>
+                            +20 on each enhancement
+                        </td>
+                        <td>420</td>
+                        <td>
+                            Increases the drop rate of equipment that possess a higher Item Level than you would normally receive.
+                            This blessing is effective even when you are outside of the Underworld.
+                        </td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td><div class="flex flex-col items-center gap-3">
+                            <span>Total Lapis Lazuli required to max out the entire Blessings of the Departed table</span>
+                            <img class="scale-75" src="./img/lapis_icon.png" alt="Lapis icon">
+                        </div></td>
+                        <td colspan="4"><span class="font-bold text-yellow-400">10,225 Lapis Lazuli Required</span></td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </section>
 
